trying readme + fix z-index
adding screenshots folder
fix z-index of top button
fix height of horizontal scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ body.dark-theme {
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-track {
